some crazy stupid message here

--- a/index.html
+++ b/index.html
@@ -16,84 +16,84 @@
   <body>
     <table>
       <caption class="Tb">
-        Task for HM after lesson<b class= "othcol">#05</b>
+        Task for HM after lesson<b class="othcol">#05</b>
       </caption>
-      
+
       <thead>
-      <tr>
-        <td class="first">#</td>
-        <td colspan="3">Name</td>
-        <td colspan="3">Points</td>
-        <td colspan="3">Team</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>1</td>
-        <td colspan="3">John</td>
-        <td colspan="3">20.5</td>
-        <td colspan="3">Real</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td colspan="3">Bill</td>
-        <td colspan="3">30.2</td>
-        <td colspan="3">Barcelona</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td colspan="3">Liz</td>
-        <td colspan="3">15.3</td>
-        <td colspan="3">Chelsy</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td colspan="3">Jane</td>
-        <td colspan="3">62.3</td>
-        <td colspan="3">Arsenal</td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td colspan="3">Richard</td>
-        <td colspan="3">40.5</td>
-        <td colspan="3">Milan</td>
-      </tr>
-      <tr>
-        <td>6</td>
-        <td colspan="3">George</td>
-        <td colspan="3">51.3</td>
-        <td colspan="3">Roma</td>
-      </tr>
-      <tr>
-        <td>7</td>
-        <td colspan="3">Jack</td>
-        <td colspan="3">26.2</td>
-        <td colspan="3">Bayern</td>
-      </tr>
-      <tr>
-        <td>8</td>
-        <td colspan="3">Ian</td>
-        <td colspan="3">36.6</td>
-        <td colspan="3">Shalke 04</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td colspan="3">Tom</td>
-        <td colspan="3">17.2</td>
-        <td colspan="3">Monako</td>
-      </tr>
-      <tr>
-        <td>10</td>
-        <td colspan="3">Michael</td>
-        <td colspan="3">64.2</td>
-        <td colspan="3">Bordo</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td class="last" colspan="4">Contacts</td>
-        <td colspan="6">Email</td>
-      </tr>
+        <tr>
+          <td>#</td>
+          <td colspan="3">Name</td>
+          <td colspan="3">Points</td>
+          <td colspan="3">Team</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>1</th>
+          <td colspan="3">John</td>
+          <td colspan="3">20.5</td>
+          <td colspan="3">Real</td>
+        </tr>
+        <tr>
+          <th>2</th>
+          <td class="tabc" colspan="3">Bill</td>
+          <td class="tabc" colspan="3">30.2</td>
+          <td class="tabc" colspan="3">Barcelona</td>
+        </tr>
+        <tr>
+          <th>3</th>
+          <td colspan="3">Liz</td>
+          <td colspan="3">15.3</td>
+          <td colspan="3">Chelsy</td>
+        </tr>
+        <tr>
+          <th>4</th>
+          <td class="tabc" colspan="3">Jane</td>
+          <td class="tabc" colspan="3">62.3</td>
+          <td class="tabc" colspan="3">Arsenal</td>
+        </tr>
+        <tr>
+          <th>5</th>
+          <td colspan="3">Richard</td>
+          <td colspan="3">40.5</td>
+          <td colspan="3">Milan</td>
+        </tr>
+        <tr>
+          <th>6</th>
+          <td class="tabc" colspan="3">George</td>
+          <td class="tabc" colspan="3">51.3</td>
+          <td class="tabc" colspan="3">Roma</td>
+        </tr>
+        <tr>
+          <th>7</th>
+          <td colspan="3">Jack</td>
+          <td colspan="3">26.2</td>
+          <td colspan="3">Bayern</td>
+        </tr>
+        <tr>
+          <th>8</th>
+          <td class="tabc" colspan="3">Ian</td>
+          <td class="tabc" colspan="3">36.6</td>
+          <td class="tabc" colspan="3">Shalke</td>
+        </tr>
+        <tr>
+          <th>9</th>
+          <td colspan="3">Tom</td>
+          <td colspan="3">17.2</td>
+          <td colspan="3">Monako</td>
+        </tr>
+        <tr>
+          <th>10</th>
+          <td class="tabc" colspan="3">Michael</td>
+          <td class="tabc" colspan="3">64.2</td>
+          <td class="tabc" colspan="3">Bordo</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="4">Contacts</td>
+          <td colspan="6">Email</td>
+        </tr>
       </tfoot>
     </table>
   </body>
