some crazy stupid message here

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <table>
-      <caption class="Tb">
-        Task for HM after lesson<b class="othcol">#05</b>
+      <caption>
+        Task for HM after lesson<span>#05</span>
       </caption>
 
       <thead>
